chore: harden Vercel deployment and resolve CRLF/node_modules git issues

--- a/.env.local.example
+++ b/.env.local.example
@@ -19,7 +19,7 @@ EMAIL_SERVICE=resend
 # 2. Get your API key from the dashboard
 # 3. Add your verified domain or use resend.dev for testing
 
-RESEND_API_KEY=
+RESEND_API_KEY=your_resend_api_key_here
 
 # Primary sender (your verified .in domain)
 # Example: secure@tensorthrottlex.in
