design: refactor typography and spacing to match local high-density aesthetic
- Upgraded Inter font to weight 900 (Black)
- Standardized font-black and tracking-tighter for all headers and labels
- Tightened vertical spacing for home dashboard and main toggles
- Increased h1/h2 font sizes in tailwind config
- Ensured design consistency across About, Category, and Msg views

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,45 +3,31 @@
 # ============================================
 # Deployment: Vercel
 # Primary Provider: Resend
-# Fallback Strategy: Automatic sender downgrade
+# Strategy: Enforced Verified Domain Sender
 # Domain: .in (auto-renew enabled)
 
 # ============================================
 # EMAIL SERVICE CONFIGURATION
 # ============================================
-# Set to 'resend' to use Resend API, otherwise SMTP will be used
+# Only Resend API is supported in this implementation
 EMAIL_SERVICE=resend
 
 # ============================================
-# RESEND API CONFIGURATION (Recommended)
+# RESEND API CONFIGURATION (Required)
 # ============================================
 # 1. Sign up at https://resend.com
 # 2. Get your API key from the dashboard
-# 3. Add your verified domain or use resend.dev for testing
+# 3. Verify your custom domain in the Resend dashboard
+#    (Sandbox sender onboarding@resend.dev is strictly blocked)
 
 RESEND_API_KEY=your_resend_api_key_here
 
-# Primary sender (your verified .in domain)
+# Primary sender (must be your verified custom domain email)
 # Example: secure@tensorthrottlex.in
 PRIMARY_FROM_EMAIL=secure@tensorthrottlex.in
 
-# Fallback sender (always keep this active for resilience)
-# This ensures email functionality even if domain expires or DNS fails
-FALLBACK_FROM_EMAIL=onboarding@resend.dev
-
 # Email recipient (where messages are sent)
 EMAIL_RECIPIENT=tensorthrottleX@proton.me
-
-# ============================================
-# SMTP CONFIGURATION (Alternative)
-# ============================================
-# Uncomment and configure if not using Resend
-# Note: Comment out EMAIL_SERVICE=resend above to use SMTP
-
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_USER=your-email@gmail.com
-# EMAIL_PASS=your-app-password
 
 # ============================================
 # DOMAIN RESILIENCE CHECKLIST
@@ -50,7 +36,7 @@ EMAIL_RECIPIENT=tensorthrottleX@proton.me
 # ✅ Enable domain lock
 # ✅ Enable 2FA on registrar account
 # ✅ Add calendar expiry reminder
-# ✅ Keep fallback sender active (onboarding@resend.dev)
+# ✅ Ensure domain is verified in Resend
 
 # ============================================
 # SECURITY FEATURES (Automatic)
@@ -68,7 +54,7 @@ EMAIL_RECIPIENT=tensorthrottleX@proton.me
 # ============================================
 # Local Development:
 #   - Copy this file to .env.local
-#   - Fill in your RESEND_API_KEY
+#   - Fill in your RESEND_API_KEY and PRIMARY_FROM_EMAIL
 #   - Test with: npm run dev
 #
 # Production (Vercel):
