feat: finalize Normalization Architecture (Flow-Bounded Layered Composition)
Implemented deterministic scaling, fluid geometry, and zoom-resilient flow plane across the entire system. Finalized 3-layer stack normalization.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,65 +1,41 @@
 # ============================================
-# PRODUCTION-GRADE EMAIL TRANSMISSION ENGINE
+# DECOUPLED MESSAGE DELIVERY ARCHITECTURE
 # ============================================
-# Deployment: Vercel
-# Primary Provider: Resend
-# Strategy: Enforced Verified Domain Sender
-# Domain: .in (auto-renew enabled)
+# Transmission: Vercel -> Relay Service -> Proton
+# Strategy: Independent Relay (Domain-Independent)
+# Primary Relay: Resend API
 
 # ============================================
-# EMAIL SERVICE CONFIGURATION
+# CORE DELIVERY CONFIGURATION
 # ============================================
-# Only Resend API is supported in this implementation
-EMAIL_SERVICE=resend
-
-# ============================================
-# RESEND API CONFIGURATION (Required)
-# ============================================
-# 1. Sign up at https://resend.com
-# 2. Get your API key from the dashboard
-# 3. Verify your custom domain in the Resend dashboard
-#    (Sandbox sender onboarding@resend.dev is strictly blocked)
-
+# 1. Resend API Key (Required)
+# Get this from https://resend.com
 RESEND_API_KEY=your_resend_api_key_here
 
-# Primary sender (must be your verified custom domain email)
-# Example: secure@tensorthrottlex.in
-PRIMARY_FROM_EMAIL=secure@tensorthrottlex.in
+# 2. Permanent Proton Anchor (Destination Email)
+# This is where all valid project messages are delivered.
+# Default: yourname@proton.me
+EMAIL_RECIPIENT=yourname@proton.me
 
-# Email recipient (where messages are sent)
-EMAIL_RECIPIENT=tensorthrottleX@proton.me
-
-# ============================================
-# DOMAIN RESILIENCE CHECKLIST
-# ============================================
-# ✅ Enable auto-renew at registrar
-# ✅ Enable domain lock
-# ✅ Enable 2FA on registrar account
-# ✅ Add calendar expiry reminder
-# ✅ Ensure domain is verified in Resend
+# 3. Relay Sender (For Proton Filters)
+# Inside Proton: Create filter to move From:noreply@system-relay.com 
+# to 'Project Messages' folder and mark as not spam.
+# Note: Ensure this domain or a variant is verified in Resend for production.
+# PRIMARY_FROM_EMAIL is now handled as noreply@system-relay.com by default.
 
 # ============================================
-# SECURITY FEATURES (Automatic)
+# SPAM PROTECTION (Mandatory Layers)
 # ============================================
-# ✅ Honeypot detection
-# ✅ IP-based rate limiting (3 requests / 5 minutes)
-# ✅ Profanity detection (English + Hindi)
-# ✅ Payload size enforcement (50KB limit)
-# ✅ Injection pattern detection
-# ✅ Server-side validation (non-bypassable)
-# ✅ Metadata enrichment (timestamp, IP, user agent)
+# ✅ Honeypot: Automated bot trap
+# ✅ Time-Based: Blocks submissions < 2s
+# ✅ Rate Limit: 3 requests / 5 minutes per IP
+# ✅ Content: Schema validation & Profanity detection
+# ✅ Link Density: Blocks > 3 links per message
+# ✅ Metadata: Logs ISO timestamp, IP hash, & user agent
 
 # ============================================
-# DEPLOYMENT NOTES
+# VERCEL DEPLOYMENT
 # ============================================
-# Local Development:
-#   - Copy this file to .env.local
-#   - Fill in your RESEND_API_KEY and PRIMARY_FROM_EMAIL
-#   - Test with: npm run dev
-#
-# Production (Vercel):
-#   - Add all variables in Vercel Dashboard
-#   - Project → Settings → Environment Variables
-#   - Redeploy after changes
-#
-# NEVER commit .env.local to version control!
+#   - Add RESEND_API_KEY and EMAIL_RECIPIENT to Vercel Environment Variables.
+#   - Deployment is decoupled from custom domain MX records.
+#   - System remains functional even if custom domain expires.
