--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "@types/nodemailer": "^7.0.9",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
