feat: reliability optimizations and UI enhancements
- Add AbortController pattern to prevent memory leaks
- Add isMountedRef guards to async operations
- Add timeout handling to moderation/contact forms
- Update sidebar icons (Monitor + rotating vinyl)
- Fix sharp module configuration
- Add StackedDeck and SystemQuoteRenderer components
- Various component and styling improvements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
+    "description": "Migrated to eslint.config.mjs. This file is no longer used by Next.js 15+ flat config.",
     "extends": "next/core-web-vitals"
 }
