--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@img/sharp-win32-x64": "^0.34.5",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -46,6 +47,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "d3": "^7.9.0",
+    "d3-selection": "^3.0.0",
+    "d3-transition": "^3.0.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.34.0",
@@ -61,6 +64,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "^6.9.2",
+    "sharp": "0.34.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -82,7 +86,15 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.2.7",
-      "@types/react-dom": "19.2.3"
-    }
+      "@types/react-dom": "19.2.3",
+      "sharp": "0.34.5"
+    },
+    "ignoredBuiltDependencies": [
+      "protobufjs",
+      "unrs-resolver"
+    ],
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
